--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DBConnectionString": "Data Source=WebFeminaria.db"
+    "ConnectionString": "Data Source=WebFeminarria.db"
   }
 }
